# sedona2

./: .gitignore  CMakeLists.txt  Notes.md  README.md
.github/workflows/: cmake.yml
adm/: compilejar.py  compilewin.py  env.py  fileutil.py  makedev.py  makedist.py  makedocs.py  makelauncher.py  makesedona.py  makesedonac.py  makesedonacert.py  makewinvm.py  platArchive.py  runsvm.py
adm/unix/: compileunix.py  makeunixvm.py
apps/: CMakeLists.txt  test-mqtt.sax
apps/unix/: platUnixMqtt.sax
cmake/: Java.cmake  Sedona.cmake
kits/inet/: inet-25648ba7-1.2.28.kit
kits/sys/: sys-d3984c51-1.2.28.kit
manifests/inet/: inet-25648ba7.xml
manifests/sys/: sys-d3984c51.xml
scode/: CMakeLists.txt  platMacOs.xml  platUnixMqtt.xml  test-mqtt.xml
src/BoschCBCMW/: kit.xml
src/BoschCBCMW/native/local/: main.c
src/MagolvesMqtt/: CMakeLists.txt  CbcMiddlewareService.sedona  MiddlewareService.sedona  ReadMe.md  kit.xml
src/MagolvesMqtt/native/: CMakeLists.txt  constants.h  log.h  mqtt_callbacks.c  mqtt_callbacks.h  mqtt_client.c  mqtt_client.h  mqtt_map.c  mqtt_map.h  mqtt_service.c
src/MagolvesMqtt/native/local/: main.c
src/MagolvesMqtt/native/sedona/: sedona.h  vmstub.c
src/MagolvesMqtt/test/: MiddlewareServiceTest.sedona  MqttTestComponent.sedona
src/MagolvesMqttKit/: CMakeLists.txt  MqttComponent.sedona  kit.xml
src/basicSchedule/: CMakeLists.txt
src/cbcmw/: CMakeLists.txt  CbcMiddlewareService.sedona  ReadMe.md  kit.xml
src/cbcmw/native/: CMakeLists.txt  constants.h  mqtt_client.c  mqtt_client.h
src/cbcmw/native/local/: main.c
src/cbcmw/native/sedona/: vmstub.c
src/control/: CMakeLists.txt
src/datetime/: CMakeLists.txt
src/datetimeStd/: CMakeLists.txt
src/func/: CMakeLists.txt
src/hvac/: CMakeLists.txt
src/inet/: CMakeLists.txt
src/launcher/: CMakeLists.txt  ReadMe.md  launcher_win32.cpp
src/logic/: CMakeLists.txt
src/math/: CMakeLists.txt
src/mqtteval/: CMakeLists.txt  MqttComponent.sedona  ReadMe.md  kit.xml
src/pricomp/: CMakeLists.txt
src/pstore/: CMakeLists.txt
src/sedona/: CMakeLists.txt
src/sedona-mqtt/: CMakeLists.txt  MQTTService.sedona  Message.sedona  Worker.sedona  kit.xml  mqtt_patch.txt
src/sedona-mqtt/native/: communityMQTT_Message.c
src/sedona/src/: CMakeLists.txt
src/sedona/src/sedona/dasp/: DaspSocket.java
src/sedonac/: CMakeLists.txt
src/sedonac/src/sedonac/: Compiler.java  CompilerException.java  CompilerLog.java  CompilerStep.java  CompilerSupport.java  Location.java  Main.java  SourceFile.java
src/sedonac/src/sedonac/asm/: CodeAsm.java  KitAsm.java  TypeAsm.java
src/sedonac/src/sedonac/ast/: AstNode.java  AstVisitor.java  AstWriter.java  Block.java  DependDef.java  Expr.java  FacetDef.java  FacetsNode.java  FieldDef.java  IncludeDef.java  KitDef.java  LocalScope.java  MethodDef.java  NativeDef.java  ParamDef.java  SlotDef.java  Stmt.java  TypeDef.java  UnresolvedType.java  VarDef.java
src/sedonac/src/sedonac/ir/: IrAddressable.java  IrField.java  IrFlat.java  IrKit.java  IrMethod.java  IrOp.java  IrPrimitive.java  IrReader.java  IrSlot.java  IrType.java  IrVTable.java  IrWriter.java
src/sedonac/src/sedonac/namespace/: ArrayType.java  Field.java  Kit.java  Method.java  Namespace.java  NativeId.java  PrimitiveType.java  Slot.java  StubType.java  Type.java  TypeUtil.java
src/sedonac/src/sedonac/parser/: Parser.java  Token.java  Tokenizer.java
src/sedonac/src/sedonac/scode/: SCodeImage.java
src/sedonac/src/sedonac/steps/: Assemble.java  AssignSlotIds.java  BuildManifest.java  CheckErrors.java  CheckHtmlLinks.java  CompileDir.java  ConstFolding.java  ConvertAppFile.java  FieldLayout.java  FilterTestClasses.java  FindTestCases.java  GenNativeTable.java  Generate.java  Inherit.java  InitImageCompile.java  InitKitCompile.java  InitStagePlatform.java  InitTranslate.java  InlineConsts.java  InstanceInit.java  MountAstIntoNamespace.java  Normalize.java  NormalizeExpr.java  OptimizeIr.java  OrderAstTypes.java  OrderIrTypes.java  OrderTypes.java  Parse.java  ReadKits.java  RenderPuml.java  ResolveDepends.java  ResolveExpr.java  ResolveFacets.java  ResolveIR.java  ResolveIncludes.java  ResolveNatives.java  ResolveTypes.java  StageNatives.java  TableOfContents.java  Translate.java  (+6 more)
src/sedonac/src/sedonac/test/: AbstractSoxTest.java  AppTest.java  CompileTest.java  DaspTest.java  DocParserTest.java  ExprTest.java  KitDbTest.java  ManifestTest.java  ParserTest.java  PrimitiveDecodeTest.java  PstoreTest.java  SecurityTest.java  SoxTest.java  Test.java  TestException.java  TokenizerTest.java  Verifies.java
src/sedonac/src/sedonac/translate/: AbstractTranslator.java  CTranslator.java  HTranslator.java  Translation.java
src/sedonac/src/sedonac/util/: AsciiColor.java  CStrGen.java  DocParser.java  Env.java  FileUtil.java  HtmlUtil.java  (+7 more)
src/sedonac/src/sedonacmt/: KitProxy.java  KitSequencer.java  MainMulti.java  MultiCompilerContext.java  MultiCompilerStep.java  WriteKitsUmlDoc.java
src/sox/: CMakeLists.txt
src/sys/: CMakeLists.txt
src/timing/: CMakeLists.txt
src/types/: CMakeLists.txt
src/vm/: CMakeLists.txt  sedona.h
src/vm-mac/: sedonaPlatform.h
src/vm-macos/: CMakeLists.txt  scode.h  sedona.h  sys_Component.h  sys_PlatformService_unix.c  vm.c
src/vm-mqtt/: CMakeLists.txt  MQTTMap.c  MQTTMap.h  communityMQTT_Message.c  nativetable.c  sedona.h  sedonaPlatform.h  sys_Component.h  sys_PlatformService_macos.c
src/vm-staged/: CMakeLists.txt  inet_util_std.h  main.c  nativetable.c  sedona.h  sedonaPlatform.h  sys_PlatformService_macos.c
src/vm-unix/: CMakeLists.txt  constants.c  constants.h  log.c  log.h  mqtt_callbacks.c  mqtt_callbacks.h  mqtt_client.c  mqtt_client.h  mqtt_map.c  mqtt_map.h  mqtt_payload.c  mqtt_payload.h  mqtt_service.c  nativetable.c  sedona.h  sedonaPlatform.h  sys_Component.c  sys_PlatformService_macos.c  sys_PlatformService_unix.c
src/vm-unix-community-mqtt/: MQTTMap.h  ReadMe.md  inet_util_std.h  sedona.h  sys_PlatformService_unix.c
src/vm-unix-community-mqtt/.par/: platformManifest.xml
src/vm-unix/.par/: platformManifest.xml
src/web/: CMakeLists.txt
